# pylox

./: .gitignore  .travis.yml  LICENSE.txt  README.md  lox.py  lox.vim  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
lox_src/: op.lox
loxpy/: Expression.py  Interpreter.py  Lox.py  Parser.py  Scanner.py  Token.py  __init__.py  builtins.py  callable.py  environment.py  error.py  expr.py  interface.py  interpreter.py  lox.py  parser.py  resolver.py  scanner.py  statement.py  token.py  util.py  visitor.py
loxsrc/: unary.lox
programs/: Interpreter.py  binding1.lox  cake.lox  class_fields.lox  class_methods.lox  class_this.lox  closure.lox  fib_for.lox  fib_func.lox  for.lox  for_interp.lox  func1.lox  inheritance.lox  iter.lox  lambda.lox  logic.lox  op_simple.lox  resolve_error.lox  scope.lox  super.lox  unused_var.lox
syntax/: lox.vim
tests/: test_ast_generate.py  test_ast_print.py  test_environment.py  test_generate_ast.py  test_interpreter.py  test_parser.py  test_resolver.py  test_scanner.py
tests/ast/: Expression.py
tools/: ASTGenerate.py  ASTPrint.py  GenerateAST.py  ast_generate.py  ast_graph.py  ast_print.py
