[tool.poetry]
name = "loxpy"
version = "0.1.0"
description = "Lox Interpreter in Pythono"
authors = ["Stefan Wong <stfnwong@gmail.com>"]
license = "ANY"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
pudb = "^2022.1.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
